# DroneTello

./: README.md  Untitled Document 1
tello_ws/install/: local_setup.sh  setup.sh
tello_ws/install/pypackage/lib/pypackage/: center  control  tello_behavior
tello_ws/install/pypackage/share/pypackage/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tello_ws/install/pypackage/share/pypackage/launch/: controlrqtlaunch.py
tello_ws/install/tello/share/tello/: package.sh
tello_ws/install/tello_control/lib/tello_control/: tello_control
tello_ws/install/tello_control/share/tello_control/: package.sh
tello_ws/install/tello_interfaces/share/tello_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tello_ws/install/tello_interfaces/share/tello_interfaces/cmake/: ament_cmake_export_libraries-extras.cmake  export_tello_interfaces__rosidl_generator_cExport-noconfig.cmake  export_tello_interfaces__rosidl_generator_cppExport.cmake  export_tello_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_tello_interfaces__rosidl_generator_pyExport.cmake  export_tello_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  (+7 more)
tello_ws/install/tello_msg/share/tello_msg/: local_setup.sh  package.sh
tello_ws/log/: latest_build
tello_ws/src/pypackage/: setup.cfg  setup.py
tello_ws/src/pypackage/pypackage/: control.py
tello_ws/src/tello_interfaces/: CMakeLists.txt
tello_ws/src/tello_interfaces/msg/: Coord.msg
tello_ws/src/tello_interfaces/srv/: DroneMode.srv
(+25 files in other folders)
