<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pypackage</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="arnaud.ville@cpe.fr">triton_07</maintainer>
  <license>Apache-2.0</license>
  
  <exec_depend>tello_msg</exec_depend>
  <exec_depend>rcply</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>tello</exec_depend>
  <exec_depend>tello_interfaces</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
